--- a/odoo_custom_portal/static/src/js/Downloads/Downloads.scss
+++ b/odoo_custom_portal/static/src/js/Downloads/Downloads.scss
@@ -1,4 +1,24 @@
 .home-content {
+  nav {
+    .profile-details {
+      display: flex;
+      align-items: center;
+      background: #F5F6FA;
+      border: 2px solid #EFEEF1;
+      border-radius: 6px;
+      height: 50px;
+      min-width: 190px;
+      padding: 0 15px 0 2px;
+    }
+  }
+
+
+  .home-content {
+    position: relative;
+    padding-top: 0px !important;
+    height: 100%;
+  }
+
   .downloads-tab-container {
     display: flex;
     flex-wrap: wrap;
@@ -15,6 +35,7 @@
       .download-tab-name {
         font-size: 1.1rem;
         font-weight: 600;
+        margin: 0;
       }
     }
   }
@@ -37,12 +58,13 @@
       border-radius: 10px;
       overflow-x: auto;
       box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15) !important;
+      padding: 20px 20px;
 
       .data-table {
         width: 100%;
         border-collapse: collapse;
-        margin: 8px 0px;
-        font-size: 0.9em;
+        font-size: 1rem;
+        font-weight: 500;
         min-width: 400px;
         border-radius: 5px 5px 0 0;
         overflow: hidden;
@@ -69,6 +91,31 @@
 
         tbody tr:last-of-type {
           //border-bottom: 1px solid #aa9828;
+        }
+
+        .checkbox-box-1 {
+          width: 1.5rem;
+          height: 1.5rem;
+          background-color: #fff;
+          color: #06516E;
+          border-radius: 3px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-shrink: 0;
+          border: 1px solid #495057;
+        }
+
+        .checkbox-input-1 {
+          width: 16px;
+          height: 16px;
+          opacity: 0;
+          position: absolute;
+        }
+
+        .checkbox-input-1:checked + .checkbox-box-1::after {
+          content: '\2714';
+          color: #495057;
         }
 
       }
