--- a/odoo_custom_portal/static/src/js/MainPortal/MainPortal.css
+++ b/odoo_custom_portal/static/src/js/MainPortal/MainPortal.css
@@ -5,6 +5,7 @@
     width: 240px;
     background: #202125;
     transition: all 0.5s ease;
+    top: 0;
 }
 
 .sidebar.active {
@@ -115,6 +116,7 @@
     width: calc(100% - 240px);
     left: 240px;
     transition: all 0.5s ease;
+
 }
 
 .sidebar.active ~ .home-section {
@@ -136,6 +138,7 @@
     padding: 0 20px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     transition: all 0.5s ease;
+    top: 0;
 }
 
 .sidebar.active ~ .home-section nav {
@@ -365,6 +368,7 @@ nav .profile-details i {
     .home-section {
         width: 100%;
         left: 0;
+        top: 0;
     }
 
     .sidebar.active ~ .home-section {
@@ -376,6 +380,7 @@ nav .profile-details i {
     .home-section nav {
         width: 100%;
         left: 0;
+        top: 0;
     }
 
     .sidebar.active ~ .home-section nav {
