--- a/odoo_custom_portal/views/header_template.xml
+++ b/odoo_custom_portal/views/header_template.xml
@@ -1,5 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+
+    <record id="planning_view_gantt_no_sample_shift" model="ir.ui.view">
+        <field name="name">planning.slot.gantt.inherit.nosample</field>
+        <field name="model">planning.slot</field>
+        <field name="inherit_id" ref="planning.planning_view_gantt"/>
+        <field name="mode">primary</field>
+        <field name="arch" type="xml">
+            <xpath expr="/gantt" position="attributes">
+                <attribute name="sample">0</attribute>
+                <attribute name="create">false</attribute>
+                <attribute name="cell_create">false</attribute>
+                <attribute name="edit">false</attribute>
+                <attribute name="plan">false</attribute>
+                <attribute name="edit">false</attribute>
+                <attribute name="string">false</attribute>
+
+            </xpath>
+        </field>
+    </record>
+
+<!--<field name="search_view_id" eval="False"/>-->
+
+    <record id="planning_action_schedule_by_resource_shift" model="ir.actions.act_window">
+        <field name="name"> </field>
+        <field name="res_model">planning.slot</field>
+        <field name="view_mode">gantt</field>
+        <field name="search_view_id" eval="0"/>
+        <field name="view_ids" eval="[(5, 0, 0),
+            (0, 0, {'view_mode': 'gantt', 'view_id': ref('planning_view_gantt_no_sample_shift')}),]"/>
+<!--        <field name="view_id" ref="odoo_custom_portal.planning_view_gantt_no_sample_shift"/>-->
+        <field name="context">{'search_default_group_by_resource': 1, 'planning_expand_resource': 1, 'planning_expand_role': 1}</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                No shifts found. Let's create one!
+            </p>
+            <p>
+                Shifts are periods allocated to your employees for a specific role. Together, they constitute your employees' planning.
+            </p>
+        </field>
+    </record>
+
+
+
+
+
+
+
 <!--    <template id="web_frontend_layout_home" name="Project Sharing View Embed">-->
 <!--        <t t-call="web.layout">-->
 <!--            <t t-set="head_project_sharing">-->
@@ -56,6 +103,77 @@
 <!--                <t t-set="body_classname" t-value="'o_web_client'"/>-->
             </body>
         </html>
+    </template>
+
+    <template id="shift_gnnat_view_front_end" name="Web layout">
+        &lt;!DOCTYPE html&gt;
+        <html t-att="html_data or {}">
+            <head>
+                <meta charset="utf-8"/>
+                <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+                <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+
+                <title t-esc="title or 'Odoo'"/>
+                <link type="image/x-icon" rel="shortcut icon" t-att-href="x_icon or '/web/static/img/favicon.ico'"/>
+
+                <script id="web.layout.odooscript" type="text/javascript">
+                    var odoo = {
+                        csrf_token: "<t t-esc="request.csrf_token(None)"/>",
+                        debug: "<t t-esc="debug"/>",
+                    };
+                </script>
+<!--                <t t-call-assets="odoo_custom_portal.webclient" t-js="false"/>-->
+<!--                <t t-call-assets="odoo_custom_portal.webclient"  t-css="false"/>-->
+
+                <t t-out="head or ''"/>
+            </head>
+            <body t-att-class="o_web_client">
+                <script type="text/javascript">
+                    odoo.__session_info__ = <t t-out="json.dumps(session_info)"/>;
+                    odoo.loadTemplatesPromise = fetch(`/web/webclient/qweb/${odoo.__session_info__.cache_hashes.qweb}?bundle=odoo_custom_portal.assets_qweb`).then(doc => doc.text());
+                </script>
+                <base target="_parent"/>
+                <t t-call-assets="web.assets_common" t-js="false"/>
+                <t t-call-assets="odoo_custom_portal.webclient" t-js="false"/>
+                <t t-call-assets="web.assets_common" t-css="false"/>
+                <t t-call-assets="odoo_custom_portal.webclient"  t-css="false"/>
+                <t t-call="web.conditional_assets_tests"/>
+<!--                <t t-set="head" t-value="head_project_sharing + (head or '')"/>-->
+<!--                <t t-set="body_classname" t-value="'o_web_client'"/>-->
+            </body>
+        </html>
+    </template>
+
+
+<!--    <template id="project_sharing_portal" name="Project Sharing View in Portal">-->
+<!--        <t t-call="portal.frontend_layout">-->
+<!--            <t t-set="no_footer" t-value="true"/>-->
+<!--            <t t-call="project.project_sharing"/>-->
+<!--        </t>-->
+<!--    </template>-->
+
+<!--    <template id="project_sharing" name="Project Sharing View">-->
+<!--        <iframe width="100%" height="100%" frameborder="0" t-attf-src="/my/project/{{ project_id }}/project_sharing"/>-->
+<!--    </template>-->
+
+    <template id="odoo_custom_portal_shift" name="Project Sharing View Embed">
+        <t t-call="web.layout">
+            <t t-set="head_project_sharing">
+                <script type="text/javascript">
+                    odoo.__session_info__ = <t t-out="json.dumps(session_info)"/>;
+                    odoo.loadTemplatesPromise = fetch(`/web/webclient/qweb/${odoo.__session_info__.cache_hashes.qweb}?bundle=odoo_custom_portal.assets_qweb_shift_view`).then(doc => doc.text());
+                </script>
+                <base target="_parent"/>
+                <t t-call-assets="web.assets_common" t-js="false"/>
+                <t t-call-assets="odoo_custom_portal.shift_view_webclient" t-js="false"/>
+                <t t-call-assets="web.assets_common" t-css="false"/>
+                <t t-call-assets="odoo_custom_portal.shift_view_webclient" t-css="false"/>
+                <t t-call="web.conditional_assets_tests"/>
+            </t>
+            <t t-set="head" t-value="head_project_sharing + (head or '')"/>
+            <t t-set="body_classname" t-value="'o_web_client'"/>
+        </t>
     </template>
 
 
