--- a/odoo_custom_portal/static/src/fonts/fonts.scss
+++ b/odoo_custom_portal/static/src/fonts/fonts.scss
@@ -91,7 +91,7 @@ $google-font-path: './google';
 }
 
 @include google-font-pair('Montserrat');
-@include google-font-pair('Open_Sans');
-@include google-font-pair('Oswald');
-@include google-font-pair('Raleway');
-@include google-font-pair('Roboto');
+//@include google-font-pair('Open_Sans');
+//@include google-font-pair('Oswald');
+//@include google-font-pair('Raleway');
+//@include google-font-pair('Roboto');
