--- a/odoo_custom_portal/static/src/js/MainPortal/MainPortal.css
+++ b/odoo_custom_portal/static/src/js/MainPortal/MainPortal.css
@@ -6,6 +6,9 @@
     background: #202125;
     transition: all 0.5s ease;
     top: 0;
+    font-family: 'Montserrat';
+    display: flex;
+    flex-direction: column;
 }
 
 .sidebar.active {
