--- a/odoo_custom_portal/static/src/js/DashBoard/DashBoard.css
+++ b/odoo_custom_portal/static/src/js/DashBoard/DashBoard.css
@@ -1,39 +1,39 @@
 
-.home-section nav .profile-details {
-    display: flex;
-    align-items: center;
-    background: #F5F6FA;
-    border: 2px solid #EFEEF1;
-    border-radius: 6px;
-    height: 50px;
-    min-width: 190px;
-    padding: 0 15px 0 2px;
-}
+/*.home-section nav .profile-details {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    background: #F5F6FA;*/
+/*    border: 2px solid #EFEEF1;*/
+/*    border-radius: 6px;*/
+/*    height: 50px;*/
+/*    min-width: 190px;*/
+/*    padding: 0 15px 0 2px;*/
+/*}*/
 
-nav .profile-details img {
-    height: 40px;
-    width: 40px;
-    border-radius: 6px;
-    object-fit: cover;
-    background-color: yellow;
-}
+/*nav .profile-details img {*/
+/*    height: 40px;*/
+/*    width: 40px;*/
+/*    border-radius: 6px;*/
+/*    object-fit: cover;*/
+/*    background-color: yellow;*/
+/*}*/
 
-nav .profile-details .admin_name {
-    font-size: 15px;
-    font-weight: 500;
-    color: #333;
-    margin: 0 10px;
-    white-space: nowrap;
-}
+/*nav .profile-details .admin_name {*/
+/*    font-size: 15px;*/
+/*    font-weight: 500;*/
+/*    color: #333;*/
+/*    margin: 0 10px;*/
+/*    white-space: nowrap;*/
+/*}*/
 
-nav .profile-details i {
-    font-size: 25px;
-    color: #333;
-}
+/*nav .profile-details i {*/
+/*    font-size: 25px;*/
+/*    color: #333;*/
+/*}*/
 
 .home-section .home-content {
     position: relative;
-    padding-top: 70px;
+    padding-top: 60px;
 }
 
 .home-section .employee-details-table {
@@ -278,10 +278,10 @@ font-size: 20px;
 
 @media (max-width: 700px) {
 
-    .home-section nav .profile-details {
-        height: 50px;
-        min-width: 40px;
-    }
+    /*.home-section nav .profile-details {*/
+    /*    height: 50px;*/
+    /*    min-width: 40px;*/
+    /*}*/
 
     .home-content .sales-boxes .sales-details {
         width: 560px;
@@ -294,9 +294,9 @@ font-size: 20px;
         margin-bottom: 15px;
     }
 
-    .sidebar.active ~ .home-section nav .profile-details {
-        display: none;
-    }
+    /*.sidebar.active ~ .home-section nav .profile-details {*/
+    /*    display: none;*/
+    /*}*/
 }
 
 @media (max-width: 400px) {
