--- a/odoo_custom_portal/static/src/js/Newsletter/Newsletter.scss
+++ b/odoo_custom_portal/static/src/js/Newsletter/Newsletter.scss
@@ -7,13 +7,59 @@
     //border: 1px solid #06516E;
     background-color: #ffffff;
     border-radius: 5px;
-    border: 1px solid #aa9828;
+    border: 1px solid #d3d3d3;
 
   }
 
   .news-letter-tab:hover {
     box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15) !important;
     background-color: #fbfbfb;
+  }
+
+  .alert-container {
+    height: 100%;
+    align-content: flex-start;
+    padding: 20px 20px;
+
+
+    @media (max-width: 450px) {
+      padding: 20px 10px;
+
+    }
+
+    .title {
+      position: relative;
+      font-size: 20px;
+      font-weight: 500;
+      color: #444B5A;
+      margin-bottom: 14px;
+    }
+
+    .alert-tab-container {
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 20px 20px;
+    }
+
+    .alert-tab-container-inside {
+      display: flex;
+      flex-flow: row wrap;
+    }
+
+    .pagination-tabs {
+      display: flex;
+
+      .pagination-button {
+        display: flex;
+        height: 2.5rem;
+        width: 2.5rem;
+        border-radius: 3px;
+        border: 1px solid #3F3F3F;
+        margin: 0px 4px;
+        justify-content: center;
+        align-items: center;
+      }
+    }
   }
 
 }
@@ -34,10 +80,11 @@
   tbody tr {
     border-bottom: 1px solid #dddddd;
   }
-  .column-1{
+
+  .column-1 {
     font-weight: 600;
     font-size: 1.1rem;
-    width:25%;
+    width: 25%;
   }
 }
 
