--- a/odoo_custom_portal/static/src/js/MyProfile/MyProfile.scss
+++ b/odoo_custom_portal/static/src/js/MyProfile/MyProfile.scss
@@ -147,7 +147,7 @@
       justify-content: center;
       align-items: center;
       padding: 8px 4px;
-      border: 1px solid #000000;
+      border: 1px solid #3F3F3F;
       border-radius: 5px;
       height: 42px;
       margin: 0px 0px 8px 0px;
