--- a/odoo_custom_portal/static/src/js/Newsletter/Newsletter.scss
+++ b/odoo_custom_portal/static/src/js/Newsletter/Newsletter.scss
@@ -32,13 +32,14 @@
       font-size: 20px;
       font-weight: 500;
       color: #444B5A;
-      margin-bottom: 14px;
+      margin-bottom: 0px;
     }
 
     .alert-tab-container {
       background-color: #fff;
       border-radius: 10px;
       padding: 20px 20px;
+      position: relative;
     }
 
     .alert-tab-container-inside {
@@ -85,6 +86,9 @@
     font-weight: 600;
     font-size: 1.1rem;
     width: 25%;
+    white-space: nowrap;
+    padding-left:4px;
+    padding-right: 4px;
   }
 }
 
