--- a/odoo_custom_portal/static/src/js/MainPortal/MainPortal.css
+++ b/odoo_custom_portal/static/src/js/MainPortal/MainPortal.css
@@ -15,6 +15,15 @@
     width: 60px;
 }
 
+.sidebar .close_icon {
+    display: none;
+    position: absolute;
+    left: 100%;
+    padding: 16px;
+    background-color: #aa9828;
+    border-radius: 0px 15px 15px 0px;
+}
+
 .sidebar .user-icon-container {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -113,18 +122,33 @@
     width: 100%;
 }
 
+.sidebar-layout-background {
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    background-color: black;
+    z-index: 500;
+    transition: opacity 0.5s, visibility 0.5s;
+}
+
 .home-section {
     position: relative;
     background: #eef1f2;
     min-height: 100vh;
     width: calc(100% - 240px);
     left: 240px;
+    /*transform: translateX(240px);*/
     transition: all 0.5s ease;
 
 }
 
 .sidebar.active ~ .home-section {
     width: calc(100% - 60px);
+    /*transform: translateX(60px);*/
     left: 60px;
 }
 
@@ -137,7 +161,8 @@
     align-items: center;
     position: fixed;
     width: calc(100% - 240px);
-    left: 240px;
+    /*left: 240px;*/
+    /*transform: translateX(240px);*/
     z-index: 100;
     padding: 0 10px 0px 20px;
     /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);*/
@@ -146,7 +171,8 @@
 }
 
 .sidebar.active ~ .home-section nav {
-    left: 60px;
+    /*left: 60px;*/
+    /*transform: translateX(60px);*/
     width: calc(100% - 60px);
 }
 
@@ -259,21 +285,39 @@ nav .sidebar-button i {
 /*}*/
 
 
-
 /* Responsive Media Query */
 @media (max-width: 1240px) {
 
     .home-section {
+
         width: calc(100% - 60px);
         left: 60px;
+        /*left: 0px;*/
+        /*transform: translateX(60px);*/
     }
 
     .sidebar {
+        z-index: 1000;
         width: 60px;
     }
 
+    .sidebar .close_icon {
+        display: none;
+    }
+
     .sidebar.active {
+        z-index: 1000;
         width: 220px;
+    }
+    .sidebar.active .close_icon {
+        display: block;
+    }
+
+    .sidebar.active ~ .sidebar-layout-background {
+        /*visibility: visible;*/
+        opacity: 0.5;
+        /*transition: opacity 0.5s, visibility 0.5s;*/
+
     }
 
     .sidebar .user-icon {
@@ -290,22 +334,23 @@ nav .sidebar-button i {
     }
 
 
-
     .sidebar.active ~ .home-section {
         /* width: calc(100% - 220px); */
+        left: 60px;
         overflow: hidden;
-        left: 220px;
+        /*left: 220px;*/
+        /*transform: translateX(220px);*/
     }
 
     .home-section nav {
         width: calc(100% - 60px);
-        left: 60px;
+        /*left: 60px;*/
     }
 
-    .sidebar.active ~ .home-section nav {
-        width: calc(100% - 220px);
-        left: 220px;
-    }
+    /*.sidebar.active ~ .home-section nav {*/
+    /*    width: calc(100% - 220px);*/
+    /*    !*left: 220px;*!*/
+    /*}*/
 }
 
 @media (max-width: 1150px) {
@@ -327,55 +372,79 @@ nav .sidebar-button i {
     /*.sidebar.active ~ .home-section nav .profile-details {*/
     /*    display: none;*/
     /*}*/
-        nav .sidebar-button .dashboard{
+    nav .sidebar-button .dashboard {
         font-size: 20px;
-            font-weight: 500;
-            white-space: nowrap;
-             user-select: none;
+        font-weight: 500;
+        white-space: nowrap;
+        user-select: none;
     }
-         nav .sidebar-button i{
+
+    nav .sidebar-button i {
         font-size: 24px;
     }
 }
 
 @media (max-width: 420px) {
+    html, body {
+      overflow-x: hidden;
+      width: 100%;
+      height: 100%;
+      margin: 0px;
+      padding: 0px;
+      scroll-behavior: smooth;
+    }
+
     .sidebar {
-        width: 0;
+        left: 0;
+        top: 0;
+        width: 220px;
+        transform: translateX(-220px);
+        -moz-transform: translateX(-220px);
+        /*transition: transform 0.4s ease;*/
     }
 
     .sidebar.active {
+        top: 0;
+        left: 0;
         width: 220px;
+        transform: translateX(0px);
+        -moz-transform: translateX(0px);
+        /*transition: transform 0.4s ease;*/
         /*position: fixed;*/
         /*z-index: 200;*/
     }
 
     .sidebar .user-icon {
-        width: 0px;
-        height: 0px;
+        width: 90px;
+        height: 90px;
         transition: all 0.4s ease;
         /*background-color: #fff;*/
         /*border-radius: 50px;*/
     }
 
-    .sidebar.active .user-icon {
-        width: 100px;
-        height: 100px;
-        transition: all 0.4s ease;
-        /*background-color: #fff;*/
-        /*border-radius: 50px;*/
-    }
+    /*.sidebar.active .user-icon {*/
+    /*    width: 100px;*/
+    /*    height: 100px;*/
+    /*    transition: all 0.4s ease;*/
+    /*    !*background-color: #fff;*!*/
+    /*    !*border-radius: 50px;*!*/
+    /*}*/
 
 
     .home-section {
         width: 100%;
         left: 0;
         top: 0;
+        /*transform: translateX(0px);*/
     }
 
     .sidebar.active ~ .home-section {
         /*left: 60px;*/
         /*width: calc(100% - 60px);*/
+        left: 0;
+        top: 0;
         width: 100%;
+        /*transform: translateX(220px);*/
     }
 
     .home-section nav {
@@ -385,7 +454,10 @@ nav .sidebar-button i {
     }
 
     .sidebar.active ~ .home-section nav {
-        left: 220px;
-        width: calc(100% - 220px);
+        /*left: 220px;*/
+        /*width: calc(100% - 220px);*/
+        width: 100%;
+        left: 0;
+        top: 0;
     }
 }
