--- a/odoo_custom_portal/views/header_template.xml
+++ b/odoo_custom_portal/views/header_template.xml
@@ -117,7 +117,7 @@
 <!--    </template>-->
         <template id="web_frontend_layout_home" name="Web layout">
         &lt;!DOCTYPE html&gt;
-        <html t-att="html_data or {}">
+        <html t-att="html_data or {}" style="scroll-behavior: smooth;">
             <head>
                 <meta charset="utf-8"/>
                 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -138,7 +138,7 @@
 
                 <t t-out="head or ''"/>
             </head>
-            <body t-att-class="o_web_client">
+            <body t-att-class="o_web_client" style="scroll-behavior: smooth;background-color:#fff;">
                 <script type="text/javascript">
                     odoo.__session_info__ = <t t-out="json.dumps(session_info)"/>;
                     odoo.loadTemplatesPromise = fetch(`/web/webclient/qweb/${odoo.__session_info__.cache_hashes.qweb}?bundle=odoo_custom_portal.assets_qweb`).then(doc => doc.text());
